[metadata]
name = hostutil
version = attr: hostutil.__version__
author = Connor Sherwood Maynes
author_email = connormaynes@gmail.com
description = hostname/address parsers/validators/utils for handling user inputs which could be either.
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
	Topic :: System :: Networking

[options]
packages = find:
python_requires = >=3.6
install_requires =
	python_hosts >=1.0.3
